Gonna try and implement pagination

--- a/pokedex-front-end/pokedex-app/src/app/components/pokemon-list-item/pokemon-list-item.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/pokemon-list-item/pokemon-list-item.component.html
@@ -1,1 +1,10 @@
-<p>pokemon-list-item works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+      <img [src]="spriteURL">
+    </div>
+    <div class="col-sm">
+      <h4>{{name}}</h4>
+    </div>
+  </div>
+</div>
