--- a/pokedex-front-end/pokedex-app/src/app/app.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/app.component.html
@@ -1,5 +1,7 @@
-<header></header>
+<!-- <header></header>
 
 <router-outlet></router-outlet>
 
-<footer></footer>
+<footer></footer> -->
+
+<app-pokemon-list></app-pokemon-list>
