--- a/pokedex-front-end/pokedex-app/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/pokemon-list/pokemon-list.component.html
@@ -1,1 +1,7 @@
 <p>pokemon-list works!</p>
+
+<!-- <<div *ngFor="let item of pokemonList">
+    <p>{{item.name }}</p>
+    <p>{{ item.url }}</p>
+</div> -->
+<app-pokemon-list-item *ngFor="let item of pokemonList" [pokemonItem] = "item"></app-pokemon-list-item>
