--- a/pokedex-front-end/pokedex-app/src/app/components/header/header.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/header/header.component.html
@@ -1,1 +1,20 @@
-<p>header works!</p>
+    <nav class="navbar navbar-expand navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">PokeApp</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+  
+        <div class="collapse navbar-collapse" id="navbarsExample02">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" routerLink="/team" routerLinkActive="active">Team <!-- <span class="sr-only">(current)</span> --></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/pokedex" routerLinkActive="active">Pokedex</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/trainer" routerLinkActive="active">Trainer</a>
+            </li>
+          </ul>
+        </div>
+    </nav>
