--- a/pokedex-front-end/pokedex-app/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/pokemon-list/pokemon-list.component.html
@@ -5,3 +5,14 @@
     <p>{{ item.url }}</p>
 </div> -->
 <app-pokemon-list-item *ngFor="let item of pokemonList" [pokemonItem] = "item"></app-pokemon-list-item>
+
+<nav aria-label="...">
+    <ul class="pagination">
+      <li class="page-item" [class.disabled]="!previousBatchURL">
+        <a class="page-link" (click)="loadPokemonList(previousBatchURL)" tabindex="-1">Previous</a>
+      </li>
+      <li class="page-item">
+        <a class="page-link" (click)="loadPokemonList(nextBatchURL)">Next</a>
+      </li>
+    </ul>
+  </nav>
