Trainer service complete including tests

--- a/pokedex-front-end/pokedex-app/src/app/components/trainer-list-item/trainer-list-item.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/trainer-list-item/trainer-list-item.component.html
@@ -1,1 +1,5 @@
-<p>trainer-list-item works!</p>
+<div>
+    <img [src] = "trainer.photo" style="max-width: 128px;">
+    <p>Trainer {{trainer.id}}</p>
+    <button (click)="removeTrainer(position)">Remove</button>
+</div>>
