--- a/pokedex-front-end/pokedex-app/src/app/components/trainer-list-item/trainer-list-item.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/trainer-list-item/trainer-list-item.component.html
@@ -1,5 +1,6 @@
-<div>
-    <img [src] = "trainer.photo" style="max-width: 128px;">
+<div class="item-container">
+    <button type="button" class="btn btn-light" (click)="removeTrainer(position)" style="float: right;">x</button>
+    <img src = 'https://www.seekpng.com/png/detail/242-2421423_pokemon-trainer-sprite-png-pixel-pokemon-trainer-sprites.png' style="max-width: 110px;">
     <p>Trainer {{trainer.id}}</p>
-    <button (click)="removeTrainer(position)">Remove</button>
-</div>>
+    <p>{{trainer.name}}</p>
+</div>
