Added pokemon Search

--- a/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.html
@@ -17,7 +17,7 @@
                 </mat-form-field>
         
                 <mat-form-field class="example-full-width" appearance="fill">
-                    <mat-label>photo</mat-label>
+                    <mat-label>Photo Url</mat-label>
                     <input type="text" matInput placeholder="photo..." formControlName="photo">
                     <mat-error *ngIf="photo.invalid && photo.touched"> 
                         Please enter a valid photo url           
