--- a/pokedex-front-end/pokedex-app/src/app/components/team-list-item/team-list-item.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/team-list-item/team-list-item.component.html
@@ -1,5 +1,5 @@
 
-<div class="card mb-3" style="max-width: 540px;" [routerLink]= "['/team/', team.id ]" >
+<div class="card mb-3" style="max-width: 540px;" [routerLink]= "['/team/', team.id ]" matRipple [matRippleColor]="rippleColor" >
   <div class="row g-0">
     <div class="col-md-2">
       <img src="{{team.photo}}" class="img-fluid rounded-start teamLogo image" alt="{{team.name}} Logo">
