Added pokemon logo

--- a/pokedex-front-end/pokedex-app/src/app/components/team-detail/team-detail.component.css
+++ b/pokedex-front-end/pokedex-app/src/app/components/team-detail/team-detail.component.css
@@ -2,7 +2,7 @@
   max-width: 30%;
   min-width: 250px;
   margin: 8px;
-  background-color: #f5e6ff;
+  background-color: #ff00001f;
 }
 
 .trainer-img {
