--- a/pokedex-front-end/pokedex-app/src/app/components/header/header.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark align-top" style="background-color: #c94c4c; color: #ffff00">
-  <a class="navbar-brand" href="#"><img class="nav-bar-logo" src="../../../assets/pokemonLogo.png " alt=""></a>
+  <a class="navbar-brand" routerLink="/pokemon"><img class="nav-bar-logo" src="../../../assets/pokemonLogo.png " alt=""></a>
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
