--- a/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.css
+++ b/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.css
@@ -9,7 +9,7 @@ button {
 .pokemon-card {
   max-width: 400px;
   margin-bottom: 8px;
-  background-color: #f5e6ff;
+  background-color: #ff00001f;
 }
 
 .team-registration {
@@ -17,9 +17,11 @@ button {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 50px;
+  margin-bottom: 5px;
   border: 2px solid #eee;
   border-radius: 10px;
 }
+
+
 
 
