--- a/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-<button mat-raised-button color="primary" (click)="hideAddButton()">{{addButtonText}}</button>
+<button mat-raised-button color="warn" (click)="hideAddButton()">{{addButtonText}}</button>
 <div class="team-registration" *ngIf="addButton">    
             <form [formGroup]="addTeamForm">
                 <mat-form-field class="example-full-width" appearance="fill">
@@ -27,8 +27,8 @@
                 </mat-form-field>
 
                 <app-pokemon-search (pokemonNameOutput)="onSearch($event)" (disabled)="disableSearch"></app-pokemon-search>
-                <button mat-raised-button color="primary"(click)="addPokemon()" [disabled]="pokemonList.length >= 6">Add to slot: {{pokemonSlot}} </button>
-                <button mat-raised-button color="primary" type="submit" (click)="onSubmit()" [disabled]="addTeamForm.invalid || pokemonList.length <= 0">Create team</button>
+                <button mat-raised-button color="warn"(click)="addPokemon()" [disabled]="pokemonList.length >= 6">Add to slot: {{pokemonSlot}} </button>
+                <button mat-raised-button color="warn" type="submit" (click)="onSubmit()" [disabled]="addTeamForm.invalid || pokemonList.length <= 0">Create team</button>
 
                 
                 <h6 *ngIf="pokemonList.length < 1"><em>Please add at least 1 Pokemon to team {{name.value}}</em></h6>
@@ -56,11 +56,11 @@
                         </mat-card-content>
                     </mat-card>
                 </div>
-                <button mat-raised-button color="primary"(click)="removePokemon()" [hidden]="pokemonList.length <= 0">Remove</button>            
+                <button mat-raised-button color="warn"(click)="removePokemon()" [hidden]="pokemonList.length <= 0">Remove</button>            
             </form>
 
     </div>
-<div>
+<div class="team-registration">
     <team-list-item *ngFor="let team of teamList" [team]="team"></team-list-item>
 </div>    
 
