--- a/pokedex-front-end/pokedex-app/src/app/components/pokemon-search/pokemon-search.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/pokemon-search/pokemon-search.component.html
@@ -6,7 +6,8 @@
                 matInput 
                 placeholder="Pokemon Name..." 
                 formControlName="pokemonName" 
-                [matAutocomplete]="auto">
+                [matAutocomplete]="auto"
+                (keyup)="sendName()">
         <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
           <mat-option *ngFor="let pokemon of filteredOptions | async" [value]="pokemon.name" (click)="sendName()">
             {{pokemon.name}}
