--- a/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <!-- Button name Toggles between Add Team and Hide Form  -->
 <button mat-raised-button color="warn" (click)="hideAddButton()">{{addButtonText}}</button>
 <div class="team-registration" *ngIf="addButton">    
             <form [formGroup]="addTeamForm">
@@ -25,12 +26,12 @@
                         Please enter a valid trainerId
                     </mat-error>
                 </mat-form-field>
-
+                <!-- Pokemon Search Box -->
                 <app-pokemon-search (pokemonNameOutput)="onSearch($event)" (disabled)="disableSearch"></app-pokemon-search>
                 <button mat-raised-button color="warn"(click)="addPokemon()" [disabled]="pokemonList.length >= 6">Add to slot: {{pokemonSlot}} </button>
                 <button mat-raised-button color="warn" type="submit" (click)="onSubmit()" [disabled]="addTeamForm.invalid || pokemonList.length <= 0">Create team</button>
 
-                
+                <!-- POKEMON CARD -  Displays Pokemon that have been added to the team  -->
                 <h6 *ngIf="pokemonList.length < 1"><em>Please add at least 1 Pokemon to team {{name.value}}</em></h6>
                 <h6 *ngIf="pokemonList.length >= 6"><em>**Maximum Pokemon Reached ({{pokemonList.length}})**</em></h6>   
                 <div *ngIf="pokemonList.length >= 1">
@@ -56,10 +57,12 @@
                         </mat-card-content>
                     </mat-card>
                 </div>
+                <!-- Removes the last pokemon that was added -->
                 <button mat-raised-button color="warn"(click)="removePokemon()" [hidden]="pokemonList.length <= 0">Remove</button>            
             </form>
 
     </div>
+    <!-- Displays all the teams -->
 <div class="team-registration">
     <team-list-item *ngFor="let team of teamList" [team]="team"></team-list-item>
 </div>    
