Updates on pagination

--- a/pokedex-front-end/pokedex-app/src/app/components/pokemon-list-item/pokemon-list-item.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/pokemon-list-item/pokemon-list-item.component.html
@@ -1,10 +1,10 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      <img [src]="spriteURL">
+
+  <div class="pokemon-item">
+    <div class="pokemon-sprite">
+      <img [src]="spriteURL" width="50" height="50">
     </div>
-    <div class="col-sm">
-      <h4>{{name}}</h4>
+    <div class="pokemon-name">
+      <p>{{name}}</p>
     </div>
   </div>
-</div>
+
