Trainer service: Added connection to API, details view and better layout

--- a/pokedex-front-end/pokedex-app/src/app/components/trainer-list-item/trainer-list-item.component.css
+++ b/pokedex-front-end/pokedex-app/src/app/components/trainer-list-item/trainer-list-item.component.css
@@ -1,8 +1,16 @@
 .item-container {
-    border: 2px solid #eee;
+    border: 2px solid #ff00001f;
     padding: 20px;
+}
+
+.item-container:hover {
+    background-color: #ff00001f;
 }
 
 p {
     margin-top: 15px;
+}
+
+button {
+    border: 2px solid #ff00001f;
 }
