--- a/pokedex-front-end/pokedex-app/src/app/components/trainer-list/trainer-list.component.css
+++ b/pokedex-front-end/pokedex-app/src/app/components/trainer-list/trainer-list.component.css
@@ -9,7 +9,7 @@ mat-form-field {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 50px;
-    border: 2px solid #eee;
+    border: 2px solid #ff00001f;
     border-radius: 10px;
 }
 
