started working on pokemon detail

--- a/pokedex-front-end/pokedex-app/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/pokemon-list/pokemon-list.component.html
@@ -16,7 +16,7 @@
     <pagination-controls (pageChange)="handlePageChange($event)"></pagination-controls>
 </div>
 <div>
-    <app-pokemon-detail></app-pokemon-detail>
+    <!-- <app-pokemon-detail></app-pokemon-detail> -->
 </div>
 </div>
 
