--- a/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.html
@@ -12,7 +12,7 @@
             </mat-form-field>
 
             <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>Photo Url</mat-label>
+                <mat-label>Photo URL</mat-label>
                 <input type="text" matInput placeholder="photo..." formControlName="photo">
                 <mat-error *ngIf="photo.invalid && photo.touched">
                     Please enter a valid photo url
