--- a/pokedex-front-end/pokedex-app/src/app/components/trainer-list/trainer-list.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/trainer-list/trainer-list.component.html
@@ -46,7 +46,7 @@
 
                 <mat-grid-tile>
                 <mat-form-field class="example-full-width" appearance="fill">
-                    <mat-label>Photo</mat-label>
+                    <mat-label>Photo URL</mat-label>
                     <input type="text" matInput formControlName="photo" placeholder="Photo...">
                     <mat-error *ngIf="photo.invalid && photo.touched">
                         Please enter a valid photo URL.
