--- a/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.html
@@ -29,7 +29,7 @@
             </mat-form-field>
 
             <!-- Pokemon Search Box -->
-            <app-pokemon-search (pokemonNameOutput)="onSearch($event)" (addPokemonOutput)="addPokemon()">
+            <app-pokemon-search (pokemonNameOutput)="onSearch($event)" (addPokemonOutput)="addPokemon()" [label]="searchLabel">
             </app-pokemon-search>
             <button mat-raised-button color="warn" (click)="addPokemon()" [disabled]="pokemonList.length >= 6">Add to
                 slot: {{pokemonSlot}} </button>
