still working on pokedex-view

--- a/pokedex-front-end/pokedex-app/src/app/components/pokemon-detail/pokemon-detail.component.css
+++ b/pokedex-front-end/pokedex-app/src/app/components/pokemon-detail/pokemon-detail.component.css
@@ -1,5 +1,6 @@
 .pokemon-card {
-  max-width: 400px;
-  margin-bottom: 8px;
+  width: 600px;
+  height: 460px;
+  margin: 8px;
   background-color: #ff00001f;
 }
