--- a/pokedex-front-end/pokedex-app/src/app/components/pokemon-detail/pokemon-detail.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/pokemon-detail/pokemon-detail.component.html
@@ -1,9 +1,11 @@
 <mat-card class="pokemon-card">
-  <mat-card-title-group>
+  <mat-card-header>
     <mat-card-title>{{pokemon.name | uppercase}}</mat-card-title>
     <mat-card-subtitle>TYPE: {{pokemon.type | uppercase}}</mat-card-subtitle>
-    <img mat-card-sm-image src="{{pokemon.imageUrl}}">
-  </mat-card-title-group>
+  </mat-card-header>
+  <div style="justify-content: center;">
+  <img src="{{pokemon.imageUrl}}" width="300" height="300">
+</div>
   <mat-card-content>
     <table class="table">
       <tr>
