--- a/pokedex-front-end/pokedex-app/src/app/components/pokemon-list-item/pokemon-list-item.component.css
+++ b/pokedex-front-end/pokedex-app/src/app/components/pokemon-list-item/pokemon-list-item.component.css
@@ -1,7 +1,8 @@
 .pokemon-item {
     display: flex;
     border-style: solid;
-    max-width: 200px;
+    width: 220px;
+    height: 60px;
 }
 
 .pokemon-name {
