Added 'that' component

--- a/pokedex-front-end/pokedex-app/src/app/components/footer/footer.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto py-3 bg-light text-end">
   <div class="container">
-    <a [routerLink]= "['/forrest']" [ngClass]="{'router-link-active':true}"><img class="choco-logo" src="../../../assets/tcbp-logo-3.JPG" alt=""></a>
+    <a (click)="loadForrest()" [ngClass]="{'router-link-active':true}"><img class="choco-logo" src="../../../assets/tcbp-logo-3.JPG" alt=""></a>
   </div>
 </footer>
