--- a/pokedex-front-end/pokedex-app/src/app/components/team-detail/team-detail.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/team-detail/team-detail.component.html
@@ -1,5 +1,7 @@
 <div class="team-card" >
-
+  <br>
+  <button mat-raised-button color="warn" (click)="goBack()">Go Back</button>
+  <br>
   <!-- Title Section -->
   <div class="d-flex align-items-top title">
     <img class="title" mat-card-sm-image src="{{team.photo}}">
