--- a/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/team-list/team-list.component.html
@@ -37,7 +37,7 @@
             <!-- Pokemon Search Box -->
             <app-pokemon-search (pokemonNameOutput)="onSearch($event)" (addPokemonOutput)="addPokemon()" [label]="searchLabel">
             </app-pokemon-search>
-            <button mat-raised-button color="warn" (click)="addPokemon()" [disabled]="pokemonList.length >= 6">Add to
+            <button mat-raised-button color="warn" (click)="addPokemon()" [disabled]="pokemonList.length >= 6 || !validPokemon">Add to
                 slot: {{pokemonSlot}} </button>
             <button mat-raised-button color="warn" type="submit" (click)="onSubmit()"
                 [disabled]="addTeamForm.invalid || pokemonList.length <= 0">Create team</button>
