Integrated Pokemon List & Added Search

--- a/pokedex-front-end/pokedex-app/src/app/components/pokemon-list-item/pokemon-list-item.component.css
+++ b/pokedex-front-end/pokedex-app/src/app/components/pokemon-list-item/pokemon-list-item.component.css
@@ -5,6 +5,11 @@
     height: 60px;
 }
 
+.pokemon-item:hover {
+  background-color: #ff00001f;
+}
+
+
 .pokemon-name {
     display: flex;
     align-items:flex-end; 
