--- a/pokedex-front-end/pokedex-app/src/app/components/pokemon-search/pokemon-search.component.html
+++ b/pokedex-front-end/pokedex-app/src/app/components/pokemon-search/pokemon-search.component.html
@@ -15,4 +15,5 @@
           </mat-option>
         </mat-autocomplete>
       </mat-form-field>
+      <h6 *ngIf="!validPokemon && pokemonName.touched"><em>Invalid Pokemon Name</em></h6>
   </form>
